content/docs/v4/plugins/psdcomposer.md
---
:append: edition_info
:tags: plugin
:edition: elite
:tagline: "(Deprecated) Dynamically edit and render PSD files - turn layers on and off, edit text layer contents, and apply certain effects."
:aliases: "/plugins/psdcomposer"
:edit_info: develop/plugins/psdcomposer/readme.md
---

*PLEASE NOTE*
* **This plugin is has been deprecated, and will likely be removed in a future release. It can only handle simple tasks. It relies on GDI+, which is not capable of rendering Photoshop effects or fonts.**
* **Feel free to fork and maintain this plugin on your own; we are no longer providing official support for it. It was working well in v4.1**
* **If you want to implement a better version of this, consider using Skia.**
* **Do not use with untrusted PSD files. This plugin has not undergone security testing.**


Allows you to edit PSD files (hide/show layers, change text layer contents, apply certain effects), and render them to JPEG, GIF, or PNG dynamically. Works as an IVirtualImageProvider, so you can post-process the composed result with any of the other plugins or commands.

Great for

* Dynamically generating clickable maps based on search results
* Generating customized product simulations where users can change multiple product variables independently, or enter text for engraving


High performance - under 400ms for test PSDs with 40+ layers.

## Installation

Either run `Install-Package ImageResizer.Plugins.PsdComposer` in the NuGet package manager, or:

1. Add ImageResizer.Plugins.PsdComposer.dll to your project.
2. Add `<add name="PsdComposer" />` inside `<resizer><plugins></plugins></resizer>` in Web.config.

## Usage

Due to the complexity of the URL syntax, it's best to use the PsdCommandBuilder class to construct your URLs.

You can hide & show layers, change layer colors, and change text layer contents through PsdCommandBuilder.

If the URLs generated by PsdCommandBuilder get too long, you can use a Pipeline.Rewrite handler to read URLs from a database based off a querystring key, and eliminate the issue.

## Version history

### v4.3 (current)

All .NET Framework projects now target .NET 4.7.2 (previously 4.5/4.5.2). No functional changes to this plugin.

### v4.2.8 and prior

This plugin has been stable since its initial release. No breaking changes.